--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,24 +4,6 @@
   min-height: 100%;
 }
 
-/* @media(min-width: 0px) {
-  .App {
-    background-color: red;
-  }
-}
-
-@media(min-width: 576px) {
-  .App {
-    background-color: rgb(255, 94, 0);
-  }
-}
-
-@media(min-width: 800px) {
-  .App {
-    background-color: rgb(255, 170, 0);
-  }
-} */
-
 .app-header {
   background: rgb(255, 255, 255);
   display: flex;
@@ -52,4 +34,33 @@
 
 .app-footer {
   background: rgb(245, 245, 245);
+}
+@media(min-width: 0) {
+  .App {
+    background-color: crimson;
+  }
+}
+
+@media(min-width: 576px) {
+  .App {
+    background-color: orangered;
+  }
+}
+
+@media(min-width: 768px) {
+  .App {
+    background-color: orange;
+  }
+}
+
+@media(min-width: 992px) {
+  .App {
+    background-color: yellow;
+  }
+}
+
+@media(min-width: 1200px) {
+  .App {
+    background-color: rgb(0, 252, 0)
+  }
 }
