--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -34,72 +34,8 @@
   }
 }
 
-@media(min-width: 576px) {
-  .App {
-    background: rgb(230, 230, 230);
-    text-align: center;
-    min-height: 100%;
-  }
-  .app-header {
-    background: rgb(255, 255, 255);
-    display: flex;
-    justify-content: space-between;
-  }
-  .header-links {
-    display: flex;
-    align-items: center;
-  }
-  .header-links a {
-    text-decoration: none;
-    color: black;
-  }
-  .app-nav {
-    background: rgb(245, 245, 245);
-  }
-  .app-aside {
-    background: rgb(245, 245, 245);
-    width: 100vw;
-  }
-  .app-main {
-    background: rgb(245, 245, 245);
-    width: 100vw;
-  }
-  .app-footer {
-    background: rgb(245, 245, 245);
-  }
-}
+/* @media(min-width: 576px) {
+} */
 
-@media(min-width: 768px) {
-  .App {
-    background: rgb(230, 230, 230);
-    text-align: center;
-    min-height: 100%;
-  }
-  .app-header {
-    background: rgb(255, 255, 255);
-    display: flex;
-    justify-content: space-between;
-  }
-  .header-links {
-    display: flex;
-    align-items: center;
-  }
-  .header-links a {
-    text-decoration: none;
-    color: black;
-  }
-  .app-nav {
-    background: rgb(245, 245, 245);
-  }
-  .app-aside {
-    background: rgb(245, 245, 245);
-    width: 100vw;
-  }
-  .app-main {
-    background: rgb(245, 245, 245);
-    width: 100vw;
-  }
-  .app-footer {
-    background: rgb(245, 245, 245);
-  }
-}
+/* @media(min-width: 768px) {
+} */
