--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,12 +1,16 @@
 .App {
   background: rgb(230, 230, 230);
-  text-align: center;
+  /* text-align: center; */
   min-height: 100%;
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+h4 {
+  margin: 0px 0px;
 }
 
 ul li {
