--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -6,11 +6,14 @@
 
 a {
   text-decoration: none;
-  color: black;
 }
 
 h4 {
   margin: 0px 0px;
+}
+
+ul {
+  padding: 0px;
 }
 
 ul li {
@@ -57,13 +60,14 @@ ul li {
 }
 
 #augium {
-  margin: 10px;
+  margin: 10px 16px 10px 8px;
 }
 
 #aside-main {
   display: grid;
   grid-template-columns: 1fr 4fr;
   gap: 1em;
+  margin: 16px;
 }
 
 /* @media(min-width: 0) {
