--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -6,13 +6,14 @@
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 h4 {
   margin: 0px 0px;
 }
 
-ul {
+.app-footer ul {
   padding: 0px;
 }
 
@@ -33,48 +34,55 @@ ul li {
 
 .app-nav {
   background: rgb(245, 245, 245);
-  padding-bottom: 16px;
+  padding: 5px;
   margin-bottom: 16px;
 }
 
 .nav-links a {
-  margin: 10vw;
+  margin-right: 10vw;
 }
 
 .app-aside {
   background: rgb(245, 245, 245);
-  padding-bottom: 16px;
+  padding: 5px;
 }
 
 .app-main {
   background: rgb(245, 245, 245);
+  padding: 5px;
   padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .app-footer {
-  background: rgb(245, 245, 245);
+  background: rgb(230, 230, 230);
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
-  margin-top: 16px;
+  padding: 5px;
 }
 
 #augium {
   margin: 10px 16px 10px 8px;
 }
 
-#aside-main {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 1em;
-  margin: 16px;
+@media(min-width: 365) {
+
 }
 
-/* @media(min-width: 0) {
-} */
-
 /* @media(min-width: 576px) {
+
 } */
 
-/* @media(min-width: 768px) {
-} */
+@media(min-width: 768px) {
+  .app-main {
+    margin-bottom: 0px;
+    order: 2;
+  }
+  #aside-main {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 1em;
+    margin: 16px;
+  }
+}
