--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -9,6 +9,10 @@ a {
   color: black;
 }
 
+a:hover {
+  color: hsl(0, 0%, 50%);
+}
+
 h4 {
   margin: 0px 0px;
 }
@@ -17,7 +21,7 @@ h4 {
   padding: 0px;
 }
 
-ul li {
+.app-footer ul li {
   list-style: none;
   padding: 0px;
   margin: 0px;
@@ -74,15 +78,19 @@ ul li {
 
 } */
 
-@media(min-width: 768px) {
+@media(min-width: 777px) {
   .app-main {
     margin-bottom: 0px;
-    order: 2;
+    /* order: 2; */
   }
   #aside-main {
     display: grid;
     grid-template-columns: 1fr 4fr;
     gap: 1em;
     margin: 16px;
+  }
+  .section-lists div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
   }
 }
