--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,7 +1,10 @@
 .App {
   background: rgb(230, 230, 230);
-  /* text-align: center; */
-  min-height: 100%;
+  height: 100%;
+}
+
+#augium {
+  margin: 10px 16px 10px 8px;
 }
 
 a {
@@ -10,11 +13,67 @@ a {
 }
 
 a:hover {
+  text-decoration: underline;
   color: hsl(0, 0%, 50%);
 }
 
-h4 {
-  margin: 0px 0px;
+
+/* HEADER */
+
+.app-header {
+  background: rgb(245, 245, 245);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  height: 75px;
+}
+
+
+/* NAV */
+
+/* .app-nav {
+  background: rgb(245, 245, 245);
+  padding: 5px;
+  margin-bottom: 16px;
+}
+
+.nav-links a {
+  margin-right: 10vw;
+} */
+
+
+/* ASIDE */
+
+.app-aside {
+  background: rgb(230, 230, 230);
+  padding: 5px;
+}
+
+
+/* MAIN */
+
+.app-main {
+  background: rgb(245, 245, 245);
+  padding: 5px;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+}
+
+#aside-main {
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+}
+
+
+/* FOOTER */
+
+.app-footer {
+  background: rgb(230, 230, 230);
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  padding: 5px;
 }
 
 .app-footer ul {
@@ -27,70 +86,26 @@ h4 {
   margin: 0px;
 }
 
-.app-header {
-  background: rgb(255, 255, 255);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  height: 75px;
-}
+/* QUERIES */
 
-.app-nav {
-  background: rgb(245, 245, 245);
-  padding: 5px;
-  margin-bottom: 16px;
-}
-
-.nav-links a {
-  margin-right: 10vw;
-}
-
-.app-aside {
-  background: rgb(245, 245, 245);
-  padding: 5px;
-}
-
-.app-main {
-  background: rgb(245, 245, 245);
-  padding: 5px;
-  padding-bottom: 16px;
-  margin-bottom: 16px;
-}
-
-.app-footer {
-  background: rgb(230, 230, 230);
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-  padding: 5px;
-}
-
-#augium {
-  margin: 10px 16px 10px 8px;
-}
-
-@media(min-width: 365) {
-
-}
-
-/* @media(min-width: 576px) {
-
-} */
-
-@media(min-width: 777px) {
+@media(min-width: 880px) {
+  .App {
+    padding-bottom: 60px;
+  }
   .app-main {
     margin-bottom: 0px;
-    /* order: 2; */
   }
   #aside-main {
-    display: grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr;
     gap: 1em;
     margin: 16px;
   }
   .section-lists div {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 2fr 8fr 1fr;
+  }
+  .app-aside {
+    background: rgb(245, 245, 245);
   }
 }
