--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+* {
+  font-family: 'Raleway', sans-serif;
+}
 
 .App {
-  background: hsl(0, 0%, 90%);
+  background: hsl(220, 40%, 87%);
+  background: linear-gradient(to bottom, hsl(192, 77%, 87%), rgb(102, 148, 204));
 }
 
 .flex-between {
@@ -13,33 +17,35 @@
   margin: 10px 16px 10px 8px;
 }
 
+#website-title {
+  color: white;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 1em;
+  letter-spacing: .1em;
+}
+
 a {
   text-decoration: none;
   color: black;
 }
 
 a:hover {
-  text-decoration: underline;
   color: hsl(0, 0%, 40%);
+  text-decoration: underline;
 }
-
-/* HEADER */
 
 .app-header div {
-  background: hsl(0, 0%, 95%);
+  background: rgb(102, 148, 204);
+  border-bottom: 8px solid hsl(213, 100%, 75%);
   display: grid;
   align-items: center;
-  grid-template-columns: 100px 1000px 10px;
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 10fr;
   height: 75px;
 }
-
-/* NAV */
 
 .app-nav {
   background: hsl(0, 0%, 95%);
   background: linear-gradient(270deg, rgba(180,180,180,1) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(180,180,180,1) 100%);
-  border-top: 2px solid hsl(0, 0%, 75%);
   padding: 5px;
   margin-bottom: 8px;
   display: flex;
@@ -48,48 +54,35 @@ a:hover {
   flex-wrap: nowrap;
 }
 
-/* ASIDE */
-
 .app-aside {
-  background: hsl(0, 0%, 95%);
+  background: hsl(235, 40%, 97%);
   padding: 5px;
 }
-
-/* MAIN */
-
 .app-main {
   background: hsl(0, 0%, 98%);
-  padding: 5px;
+  padding: 5px 5px 18px 5px;
   margin-bottom: 16px;
 }
-
 .remove-bullet-list {
   list-style-type: none;
 }
-
 .title-line {
   border-bottom: 1px solid hsl(0, 0%, 75%);
 }
-
 #aside-main {
   display: grid;
   grid-template-rows: 1fr 10fr;
   margin-bottom: 8px;
 }
-
 .exp-list {
-  width: 350px;
+  width: 50vw;
 }
-
-/* FOOTER */
-
 .app-footer {
-  background: hsl(0, 0%, 90%);
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
+  display: grid;
+  grid-template-columns: 5rem 7rem 7rem;
+  gap: 1rem;
+  line-height: 2;
   padding: 5px;
-  width: 10%;
 }
 
 .app-footer ul {
@@ -102,23 +95,25 @@ a:hover {
   margin: 0px;
 }
 
-/* QUERIES */
-
 @media(min-width: 576px) {
   main section {
     padding-right: 2vw;
   }
   .exp-list {
-    width: 65vw;
+    width: 60vw;
   }
 }
 
-@media(min-width: 767px) {
+@media(min-width: 895px) {
   .App {
     padding-bottom: 60px;
   }
   .app-main {
+    box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
     margin-bottom: 0px;
+  }
+  .app-aside {
+    box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
   }
   #aside-main {
     grid-template-columns: 1fr 4fr;
@@ -134,15 +129,16 @@ a:hover {
     padding: 0vw 2vw;
   }
   .exp-list {
-    width: 45vw;
+    width: 40vw;
   }
 }
-@media(min-width: 1020px) {
+
+@media(min-width: 1271px) {
   .section-lists div {
     display: grid;
-    grid-template-columns: 110px 500px 1fr;
+    grid-template-columns: 110px 600px 1fr;
   }
   .exp-list {
-    width: 55vw;
+    width: 600px;
   }
 }
