--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   background: hsl(220, 40%, 87%);
-  background: linear-gradient(to bottom, hsl(192, 77%, 87%), rgb(102, 148, 204));
+  background: linear-gradient(to bottom, hsl(192, 77%, 87%), hsl(213, 50%, 60%));
 }
 
 .flex-between {
@@ -22,23 +22,29 @@ a {
   color: hsl(0, 0%, 0%);
 }
 .link-desat:hover {
+  transition: all 100ms ease;
   color: hsl(0, 0%, 40%);
 }
-.footer-link:hover {
+.link-highlight:hover {
+  transition: all 100ms ease;
   color: hsl(0, 0%, 100%);
 }
 
 .augium-web-icon {
   border-radius: 100%;
-  width: 3em;
+  width: 2.5em;
   margin: 0px 10px;
 }
 
 .profile-photo {
-  border: 3px solid rgba(115, 115, 155, 0.4);
+  border: 2px solid rgba(115, 115, 155, .5);
+  -moz-box-shadow: 0 -1px 1px 3px rgba(115, 115, 155, .5);
+  -webkit-box-shadow: 0 -1px 1px 3px rgba(115, 115, 155, .5);
+  box-shadow: 0 -1px 1px 2px rgba(115, 115, 155, .5);
   border-radius: 50%;
   width: 180px;
-  position: relative; 
+  margin: 8px;
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -49,14 +55,17 @@ a {
   font-size: .9em;
   letter-spacing: .1em;
   width: 12em;
+  cursor: default;
+  pointer-events: none;
 }
 
 .app-header > div {
-  background: rgb(102, 148, 204);
+  background: hsl(213, 50%, 60%);
   border-bottom: 8px solid hsl(213, 100%, 75%);
   display: grid;
   align-items: center;
-  grid-template-columns: 1fr 15fr;
+  grid-template-columns: .4fr 10fr 2fr;
+  font-size: .9em;
 }
 
 .app-nav {
@@ -64,6 +73,7 @@ a {
   background: linear-gradient(270deg, rgba(180,180,180,1) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(180,180,180,1) 100%);
   padding: 8px 0px;
   margin-bottom: 8px;
+  font-size: .9em;
   align-items: center;
   flex-wrap: nowrap;
 }
@@ -92,6 +102,7 @@ a {
 .app-footer-link-grid {
   justify-content: space-around;
   line-height: 2;
+  font-size: .9em;
   padding-left: 8px;
 }
 
@@ -127,7 +138,6 @@ a {
   }
   #aside-main {
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
     gap: 8px;
     margin: 8px;
     border-bottom: 0px;
@@ -155,9 +165,6 @@ a {
 }
 
 @media(min-width: 1251px) {
-  .section-lists div {
-    grid-template-columns: 1fr 5fr 1fr;
-  }
   .profile-photo {
     width: 300px;
   }
