--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ a {
 
 .augium-web-icon {
   border-radius: 100%;
-  width: 2.5em;
+  width: 3em;
   margin: 0px 10px;
 }
 
@@ -66,6 +66,10 @@ a {
   align-items: center;
   grid-template-columns: .4fr 10fr 2fr;
   font-size: .9em;
+}
+
+.header-padd-right {
+  padding-right: 8px;
 }
 
 .app-nav {
