--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
 * {
   font-family: 'Raleway', sans-serif;
+  --color-background-1: #6694cc;
+  --color-background-2: #c4edf7;
+  --color-background-3: #f4f5fa;
+  --color-shadow: #808080;
+
+  --color-black: #000000;
+  --color-gray: #595959;
+  --color-gray-2: #b4b4b4;
+  --color-white: #ffffff;
+  
+  --color--header-detail-1: #80b9ff;
+
+  --color-photo-detail-1: #73739b80;
 }
 
 body {
-  background: hsl(220, 40%, 87%);
-  background: linear-gradient(to bottom, hsl(192, 77%, 87%), hsl(213, 50%, 60%));
+  background: var(--color-background-1);
+  background: linear-gradient(to bottom, var(--color-background-2), var(--color-background-1));
 }
 
 .flex-between {
@@ -12,6 +25,7 @@ body {
   justify-content: space-between;
   flex-wrap: nowrap;
 }
+
 .flex-around {
   display: flex;
   justify-content: space-around;
@@ -19,15 +33,15 @@ body {
 
 a {
   text-decoration: none;
-  color: hsl(0, 0%, 0%);
+  color: var(--color-black);
 }
 .link-desat:hover {
   transition: all 100ms ease;
-  color: hsl(0, 0%, 40%);
+  color: var(--color-gray);
 }
 .link-highlight:hover {
   transition: all 100ms ease;
-  color: hsl(0, 0%, 100%);
+  color: var(--color-white);
 }
 
 .augium-web-icon {
@@ -37,10 +51,10 @@ a {
 }
 
 .profile-photo {
-  border: 2px solid rgba(115, 115, 155, .5);
-  -moz-box-shadow: 0 -1px 1px 3px rgba(115, 115, 155, .5);
-  -webkit-box-shadow: 0 -1px 1px 3px rgba(115, 115, 155, .5);
-  box-shadow: 0 -1px 1px 2px rgba(115, 115, 155, .5);
+  border: 2px solid var(--color-photo-detail-1);
+  -moz-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+  -webkit-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
+  box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
   border-radius: 50%;
   width: 180px;
   margin: 8px;
@@ -50,7 +64,7 @@ a {
 }
 
 #website-title {
-  color: white;
+  color: var(--color-white);
   font-family: 'Orbitron', sans-serif;
   font-size: .9em;
   letter-spacing: .1em;
@@ -60,8 +74,8 @@ a {
 }
 
 .app-header > div {
-  background: hsl(213, 50%, 60%);
-  border-bottom: 8px solid hsl(213, 100%, 75%);
+  background: var(--color-background-1);
+  border-bottom: 8px solid var(--color--header-detail-1);
   display: grid;
   align-items: center;
   grid-template-columns: .4fr 10fr 2fr;
@@ -73,8 +87,8 @@ a {
 }
 
 .app-nav {
-  background: hsl(0, 0%, 95%);
-  background: linear-gradient(270deg, rgba(180,180,180,1) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(180,180,180,1) 100%);
+  background: var(--color-white);
+  background: linear-gradient(270deg, var(--color-gray-2) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray-2) 100%);
   padding: 8px 0px;
   margin-bottom: 8px;
   font-size: .9em;
@@ -83,24 +97,24 @@ a {
 }
 
 .app-aside {
-  background: hsl(235, 40%, 97%);
+  background: var(--color-background-3);
   padding: 2vw;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--color-black);
 }
 
 .app-main {
-  background: hsl(0, 0%, 98%);
+  background: var(--color-white);
   padding: 5px 5px 18px 5px;
 }
 
 .title-line {
-  border-bottom: 1px solid hsl(0, 0%, 75%);
+  border-bottom: 1px solid var(--color-gray-2);
 }
 
 #aside-main {
   display: grid;
   margin-bottom: 8px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--color-black);
 }
 
 .app-footer-link-grid {
@@ -130,14 +144,14 @@ a {
 
 @media(min-width: 768px) {
   .app-main {
-    -moz-box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
-    -webkit-box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
-    box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
+    -moz-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
+    -webkit-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
+    box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
   }
   .app-aside {
-    -moz-box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
-    -webkit-box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
-    box-shadow: 0rem 0rem .3rem .001rem hsl(0, 0%, 50%);
+    -moz-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
+    -webkit-box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
+    box-shadow: 0rem 0rem .3rem .001rem var(--color-shadow);
     border-bottom: 0px;
   }
   #aside-main {
