--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,43 @@
-* {
-  font-family: 'Raleway', sans-serif;
-}
-
 .color-theme-normal {
   --color-background-1: #6694cc;
   --color-background-2: #c4edf7;
   --color-background-3: #f5f5fa;
   
-  --color-shadow: #808080;
-
-  --color-black: #000000;
-  --color-gray: #5c5c5c;
-  --color-gray-2: #b4b4b4;
+  --color-gray: #b4b4b4;
   --color-white: #ffffff;
+  
+  --font-color-1: #000000;
+  --font-color-2: #5c5c5c;
+  --font-color-3: #ffffff;
+  
+  --color-shadow: #808080;
   
   --color--header-detail-1: #80b9ff;
   --color-photo-detail-1: #73739b80;
+  --button-dark-detail: #000000;
 }
 
 .color-theme-dark {
   --color-background-1: hsl(213, 50%, 20%);
-  --color-background-2: hsl(192, 76%, 87%);
-  --color-background-3: hsl(240, 33%, 97%);
+  --color-background-2: hsl(192, 76%, 23%);
+  --color-background-3: hsl(240, 10%, 13%);
   
-  --color-shadow: hsl(0, 0%, 50%);
+  --color-gray: hsl(0, 0%, 32%);
+  --color-white: #212121;
   
-  --color-black: #000000;
-  --color-gray: #5c5c5c;
-  --color-gray-2: #b5b5b5;
-  --color-white: #ffffff;
+  --font-color-1: #ffffff;
+  --font-color-2: hsl(0, 0%, 60%);
+  --font-color-3: hsl(0, 0%, 50%);
   
-  --color--header-detail-1: hsl(213, 100%, 75%);
-  --color-photo-detail-1: hsla(240, 17%, 53%, 0.502);
-  /* color: var(--color-white); */
+  --color-shadow: hsl(0, 0%, 29%);
+  
+  --color--header-detail-1: hsl(213, 75%, 25%);
+  --color-photo-detail-1: hsla(240, 17%, 100%, 0.502);
+  --button-dark-detail: #000000;
 }
 
-body {
+#root-react {
+  font-family: 'Raleway', sans-serif;
   background: var(--color-background-1);
   background: linear-gradient(to bottom, var(--color-background-2), var(--color-background-1));
 }
@@ -66,15 +68,15 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--color-black);
+  color: var(--font-color-1);
 }
 .link-desat:hover {
   transition: all 100ms ease;
-  color: var(--color-gray);
+  color: var(--font-color-2);
 }
 .link-highlight:hover {
   transition: all 100ms ease;
-  color: var(--color-white);
+  color: var(--font-color-3);
 }
 
 .augium-web-icon {
@@ -97,7 +99,7 @@ a {
 }
 
 #website-title {
-  color: var(--color-white);
+  color: #ffffff;
   font-family: 'Orbitron', sans-serif;
   font-size: .9em;
   letter-spacing: .1em;
@@ -108,54 +110,55 @@ a {
 
 .buttons {
   padding: 3px 5px;
-  border: 1.5px solid var(--color-gray-2);
+  color: var(--font-color-1);
   background-color: var(--color-white);
+  border: 1.5px solid var(--color-gray);
 }
 .buttons:hover {
-  background-color: var(--color-gray-2);
+  background-color: var(--color-gray);
 }
 .dark-button:hover {
-  background-color: var(--color-black);
-  color: var(--color-white);
+  background-color: var(--button-dark-detail);
+  color: var(--font-color-3);
 }
 
 .app-header > div {
-  background: var(--color-background-1);
-  border-bottom: 8px solid var(--color--header-detail-1);
   display: grid;
   align-items: center;
   grid-template-columns: .4fr 10fr 2fr;
   font-size: .9em;
+  background: var(--color-background-1);
+  border-bottom: 8px solid var(--color--header-detail-1);
 }
 
 .app-nav {
-  background: var(--color-white);
-  background: linear-gradient(270deg, var(--color-gray-2) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray-2) 100%);
   padding: 8px 0px;
   margin-bottom: 8px;
   font-size: .9em;
   align-items: center;
   flex-wrap: nowrap;
+  background: var(--color-white);
+  background: linear-gradient(270deg, var(--color-gray) 0%, var(--color-white) 10%, var(--color-white) 90%, var(--color-gray) 100%);
 }
 
 .app-aside {
-  background: var(--color-background-3);
   padding: 2vw;
+  background: var(--color-background-3);
 }
 
 .app-main {
-  background: var(--color-white);
   padding: 5px 5px 18px 5px;
+  background: var(--color-white);
 }
 
 .title-line {
-  border-bottom: 1px solid var(--color-gray-2);
+  border-bottom: 1px solid var(--color-gray);
 }
 
 #aside-main {
-  display: grid;
   margin-bottom: 8px;
-  border-bottom: 1px solid var(--color-black);
+  display: grid;
+  color: var(--font-color-1);
 }
 
 .top-link-style {
@@ -163,14 +166,18 @@ a {
   width: 100%;
 }
 .top-link-style:hover {
-  background: var(--color-gray-2);
+  background: var(--color-gray);
+}
+
+.app-footer {
+  font-size: .9em;
+  color: var(--font-color-1);
 }
 
 .app-footer-link-grid {
-  justify-content: space-around;
   line-height: 2;
-  font-size: .9em;
   padding-left: 8px;
+  justify-content: space-around;
 }
 
 .app-footer ul {
