--- a/src/App.css
+++ b/src/App.css
@@ -125,13 +125,13 @@ a {
 
 /* --------------------------------------LAYOUT-------------------------------------- */
 
+
 /* HEADER + NAV */
 .app-header {
   position: fixed;
   width: 100%;
-}
-
-.static-elements {
+  z-index: 2;
+  top: 0%;
 }
 
 .app-header > div {
@@ -145,7 +145,6 @@ a {
 
 .app-nav {
   padding: 8px 0px;
-  margin-bottom: 8px;
   font-size: .9em;
   align-items: center;
   flex-wrap: nowrap;
@@ -156,11 +155,13 @@ a {
 /* ASIDE + MAIN */
 .app-aside {
   padding: 2vw;
+  margin-top: 100px;
   background: var(--color-background-3);
 }
 
 .app-main {
   padding: 5px 5px 18px 5px;
+  margin-top: 100px;
   background: var(--color-white);
 }
 
