--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 /* COLORS */
-.color-theme-normal {
+.color-theme-light {
   --color-background-1: #6694cc;
   --color-background-2: #c4edf7;
   --color-background-3: #f5f5fa;
